# Crazy

./: .gitignore  CMakeLists.txt  Crazy.pro  Crazy.qrc  Crazy.rc  Crazy2018.pro  LICENSE  README.md  cmake_build.sh  main.qml
qml/: main.qml
src/: interaction.cpp  interaction.h  main.cpp  radiopacket.cpp  radiopacket.h  serialobject.cpp
